--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,23 +1,63 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Java Web Starter Application</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="stylesheet" href="style.css" />
-</head>
-<body>
-	<table>
-		<tr>
-			<td style='width: 30%;'><img src='images/newapp-icon.png'>
-			</td>
-			<td>
-				<h1 id = "message"></h1>
-				<p class='description'></p> Thanks for creating a <span class="blue">Liberty for Java Starter Application</span>. Get started by reading our <a
-				href="https://www.ng.bluemix.net/docs/#starters/liberty/index.html#liberty">documentation</a>
-				or use the Start Coding guide under your app in your dashboard.
-			</td>
-		</tr>
-	</table>
-	<script type="text/javascript" src="index.js"></script>
-</body>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<title>IBM Visitor Information System</title>
+		
+		<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+		<link rel="stylesheet" href="./jquery-ui.min.css" />
+		<script src="https://code.jquery.com/ui/1.11.0/jquery-ui.min.js"></script>
+		
+		<link rel="stylesheet" href="./style.css" />
+	</head>
+	<body>
+		<header>
+			<hgroup>
+				<h1>IBM Visitor Information System</h1>
+				<p>
+					Cloud based Visitor Information Management System.
+				</p>
+				<img src="./images/ibm_im.jpg"/>
+			</hgroup>
+		</header>
+		
+		<div id="searchDiv">
+			<input type="search" id="searchVisitQueryField" 
+				name=""searchVisitQueryField"" 
+				placeholder="Search Visit Records">
+			<input type="button" id="searchVisitBtn" value="Search">
+		</div>
+		
+		<div id="messagesDiv">
+			
+		</div>
+		
+		<div id="visitRecordsList">
+			<table id="workorderTab">
+				<thead>
+					<tr>
+						<th>Visit ID #</th>
+						<th>Industry</th>
+						<th>Account Name</th>
+						<th>Hosting Manager</th>
+					</tr>
+				</thead>
+				
+				<tbody>
+					<tr>
+						
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		
+		<div id="taskBarDiv">
+			<input type="button" id="createWorkorderBtn" value="Create New Visit">
+		</div>
+		
+		
+		<script src="./index.js"></script>
+	</body>
 </html>
