* added js code to hide the messages div * added code for buttons.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -54,7 +54,7 @@
 		</div>
 		
 		<div id="taskBarDiv">
-			<input type="button" id="createWorkorderBtn" value="Create New Visit">
+			<input type="button" id="createVisitBtn" value="Create New Visit">
 		</div>
 		
 		
