* Added GET method handler to the VisitResource RESTful service.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -42,13 +42,18 @@
 		</div>
 		
 		<div id="visitRecordsList">
-			<table id="workorderTab">
+			<table id="visitRecordsTable">
 				<thead>
 					<tr>
+						<th>Select</th>
 						<th>Visit ID #</th>
+						<th>Visit Type</th>
 						<th>Industry</th>
 						<th>Account Name</th>
+						<th>PAL/LFE</th>
+						<th>CBC</th>
 						<th>Hosting Manager</th>
+						<th>Visit Agenda</th>
 					</tr>
 				</thead>
 				
