* incremental update - 0003 : Implemented Delete Visit records function.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -65,6 +65,13 @@
 			</table>
 		</div>
 		
+		<div id="deleteConfirmationDialog" title="Delete Visit Records?">
+			<p>
+				The selected visit records will be purged from system.
+				Do you wish to continue?
+			</p>	
+		</div>
+		
 		<div id="createVisitDialog" title="Visitor Information Sheet">
 			<form id="createVisitForm">
 				<div id="createVisitTabs">
