* default visit type should always be highlighted as "only client " * Replace column visit type with "start date"  = this should be min. of date from date fields.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -47,7 +47,7 @@
 					<tr>
 						<th>Select</th>
 						<th>Visit ID #</th>
-						<th>Visit Type</th>
+						<th>Visit Start Date</th>
 						<th>Industry</th>
 						<th>Account Name</th>
 						<th>PAL/LFE</th>
@@ -85,9 +85,9 @@
 					<div id="visitOverviewTab">
 						<fieldset id="visitTypeRadio">
 							<legend>Visit Type</legend>
-							<input type="radio" id="visitTypeChoiceI" name="visitTypeChoice" value="I" checked>
+							<input type="radio" id="visitTypeChoiceI" name="visitTypeChoice" value="I">
 							<label for="visitTypeChoiceI">Only IBM</label>
-							<input type="radio" id="visitTypeChoiceC" name="visitTypeChoice" value="C">
+							<input type="radio" id="visitTypeChoiceC" name="visitTypeChoice" value="C" checked>
 							<label for="visitTypeChoiceC">Only Client</label>
 							<input type="radio" id="visitTypeChoiceB" name="visitTypeChoice" value="B">
 							<label for="visitTypeChoiceB">Both</label>
