* added code for opening visit record details.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -25,9 +25,10 @@
 		</header>
 		
 		<div id="taskBarDiv">
-			<input type="button" id="createVisitBtn" value="Create New Visit">
-			<input type="button" id="deleteVisitBtn" value="Delete Visit(s)">
-			<input type="button" id="exportRptBtn" value="Export Report">
+			<input type="button" id="createVisitBtn" value="New Visit" title="Create a new visit. This will open up the visit record creator dialog.">
+			<input type="button" id="openVisitBtn" value="Open Visit(s)" title="Opens all selected visit record(s) details.">
+			<input type="button" id="deleteVisitBtn" value="Delete Visit(s)" title="Delete all selected visit records from database.">
+			<input type="button" id="exportRptBtn" value="Export Report" title="Export an excel dump of the existing visit record database.">
 		</div>
 		
 		<div id="searchDiv">
