* create visit form initialization code added.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -118,8 +118,7 @@
 								<tr>
 									<td><label for="palLFE">PAL/LFE:</label></td>
 									<td>
-										<input name="palLFE" id="palLFE" type="text" required list="palLFEChoice">
-										<datalist id="palLFEChoice">
+										<select name="palLFE" id="palLFE" required>
 											<option value="Mohan Bachav">Mohan Bachav</option>
 											<option value="Shreenivas Kulkarni">Shreenivas Kulkarni</option>
 											<option value="Vandana Malaiya">Vandana Malaiya</option>
@@ -137,15 +136,16 @@
 											<option value="Sandeep Debray">Sandeep Debray</option>
 											<option value="Rajeev Warrier">Rajeev Warrier</option>
 											<option value="Anindya Majumdar">Anindya Majumdar</option>
-										</datalist>
+										</select>
+										
 									</td>
 								</tr>
 								<tr>
 									<td><label for="cbc">CBC</label></td>
 									<td>
 										<select id="cbc" name="cbc" required>
-											<option value="Y">YES</option>
-											<option value="N">NO</option>
+											<option value="YES">YES</option>
+											<option value="NO">NO</option>
 										</select>
 									</td>
 								</tr>
