* PAL/LFE changes as instructed: 1. replace Debkumar Mondal by Chetna Thakur 2. replace Chitralekha Datta by Sanjeev Majumder 3. replace Vandana Malaiya by Debashis Das 4. replace Pradeep Joshi by Daniel Konala 5. delete Arijit Mookherjee

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -123,18 +123,17 @@
 										<select name="palLFE" id="palLFE" required>
 											<option value="Mohan Bachav">Mohan Bachav</option>
 											<option value="Shreenivas Kulkarni">Shreenivas Kulkarni</option>
-											<option value="Vandana Malaiya">Vandana Malaiya</option>
-											<option value="Chitralekha Datta">Chitralekha Datta</option>
+											<option value="Debashis Das">Debashis Das</option>
+											<option value="Sanjeev Majumder">Sanjeev Majumder</option>
 											<option value="Nikhil A Wadgaonkar">Nikhil A Wadgaonkar</option>
 											<option value="Kiran Papanna">Kiran Papanna</option>
-											<option value="Debkumar Mondal">Debkumar Mondal</option>
+											<option value="Chetna Thakur">Chetna Thakur</option>
 											<option value="Suryadipta Datta">Suryadipta Datta</option>
 											<option value="Milind Kulkarni">Milind Kulkarni</option>
 											<option value="Santosh Agharkar">Santosh Agharkar</option>
 											<option value="Santosh Prasad">Santosh Prasad</option>
-											<option value="Pradeep Joshi">Pradeep Joshi</option>
+											<option value="Daniel Konala">Daniel Konala</option>
 											<option value="Neetu Gupta">Neetu Gupta</option>
-											<option value="Arijit Mookherjee">Arijit Mookherjee</option>
 											<option value="Sandeep Debray">Sandeep Debray</option>
 											<option value="Rajeev Warrier">Rajeev Warrier</option>
 											<option value="Anindya Majumdar">Anindya Majumdar</option>
