* added support for Primary location for visit.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -51,6 +51,7 @@
 						<th>Select</th>
 						<th>Visit ID #</th>
 						<th>Visit Start Date</th>
+						<th>Primary Location</th>
 						<th>Industry</th>
 						<th>Account Name</th>
 						<th>PAL/LFE</th>
