* delivery choice code updates for backend.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -104,7 +104,7 @@
 							<legend>Delivery Type</legend>
 							<input type="radio" id="deliveryTypeChoiceE" name="deliveryTypeChoice" value="E">
 							<label for="deliveryTypeChoiceE">Existing Delivery</label>
-							<input type="radio" id="deliveryTypeChoiceN" name="deliveryTypeChoice" value="N">
+							<input type="radio" id="deliveryTypeChoiceN" name="deliveryTypeChoice" value="N" checked>
 							<label for="deliveryTypeChoiceN">New Opportunity</label>
 							<span class="on-screen-tips">* Please choose the delivery type from the button set.</span>
 						</fieldset>
