--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,8 +13,8 @@
 		<script src="./scripts/jquery.validate.min.js"></script>
 		 -->
 		 
-		 <link rel="stylesheet" href="./bower_components/datatables/media/css/dataTables.jqueryui.min.css" />
-		 <script src="./bower_components/datatables/media/js/dataTables.jqueryui.min.js"></script>
+		 <link rel="stylesheet" href="./bower_components/datatables/media/css/jquery.dataTables.min.css" />
+		 <script src="./bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
 		 
 		<link rel="stylesheet" href="./style.css" />
 	</head>
