* more datatable fixes.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -51,7 +51,7 @@
 			<table id="visitRecordsTable">
 				<thead>
 					<tr>
-						<th>Select</th>
+						<!--  <th>Select</th>  -->
 						<th>Visit ID #</th>
 						<th>Visit Start Date</th>
 						<th>Primary Location</th>
