--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,10 +12,13 @@
 		<!-- 
 		<script src="./scripts/jquery.validate.min.js"></script>
 		 -->
-		 
+		 <!-- 
 		 <link rel="stylesheet" href="./bower_components/datatables/media/css/jquery.dataTables.min.css" />
 		 <script src="./bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
-		 
+		  -->
+		  <link rel="stylesheet" href="//cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css" />
+		  <script src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
+		  
 		<link rel="stylesheet" href="./style.css" />
 	</head>
 	<body>
