* added borders, shading to datatable * added datatable insertion support.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -51,7 +51,7 @@
 		</div>
 		
 		<div id="visitRecordsList">
-			<table id="visitRecordsTable">
+			<table id="visitRecordsTable" class="cell-border hover display">
 				<thead>
 					<tr>
 						<!--  <th>Select</th>  -->
