* data tables minor ui modifications.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,12 +12,15 @@
 		<!-- 
 		<script src="./scripts/jquery.validate.min.js"></script>
 		 -->
-		 <!-- 
+		 
 		 <link rel="stylesheet" href="./bower_components/datatables/media/css/jquery.dataTables.min.css" />
+		 <link rel="stylesheet" href="./bower_components/datatables/media/css/dataTables.jqueryui.min.css" />
 		 <script src="./bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
-		  -->
+		 <script src="./bower_components/datatables/media/js/dataTables.jqueryui.min.js"></script>
+		  <!-- 
 		  <link rel="stylesheet" href="//cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css" />
 		  <script src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
+		   -->
 		  
 		<link rel="stylesheet" href="./style.css" />
 	</head>
