* added favicon support.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<title>IBM Visitor Information System</title>
+		<link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
 		
 		<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<link rel="stylesheet" href="./jquery-ui.min.css" />
