Task # 54973 Change the masthead to read as: IBM Visitor Information System -
Cloud based Visitor Information Management System for Client Innovation
Center (CIC).

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,7 +30,7 @@
 			<hgroup>
 				<h1>IBM Visitor Information System</h1>
 				<p>
-					Cloud based Visitor Information Management System.
+					Cloud based Visitor Information Management System for Client Innovation Center (CIC)
 				</p>
 				<img src="./images/ibm_im.jpg"/>
 			</hgroup>
