Task # 54965 Final push to prod. Removing dangerous test code.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -59,7 +59,7 @@
 				<thead>
 					<tr>
 						<!--  <th>Select</th>  -->
-						<th>Visit ID #</th>
+						<th>Visit Ref. #</th>
 						<th>Visit Start Date</th>
 						<th>Primary Location</th>
 						<th>Industry</th>
