* bugfix: timeout error for selections * update: removed unncessary files junk (HelloResource / TestCloudant) * update: documentation updated. * Task # 54974: Added sector field to creation dialog, also added sector map as a configurable parameter in environment variables retrieved through a REST service.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -130,14 +130,16 @@
 						<table>
 							<tbody>
 								<tr>
+									<td><label for="sector">Sector:</label></td>
+									<td>
+										<select name="sector" id="sector" required>
+										</select>
+									</td>
+								</tr>
+								<tr>
 									<td><label for="industry">Industry:</label></td>
 									<td>
 										<select name="industry" id="industry" required>
-											<option value="Electronics">Electronics</option>
-											<option value="Auto">Auto</option>
-											<option value="Industrial Products">Industrial Products</option>
-											<option value="C&P">C&P</option>
-											<option value="Aerospace & Defence">Aerospace & Defence</option>
 										</select>
 									</td>
 								</tr>
