Task # 54967 * added audit trail to the visit open dialog
Task # 54974
* added sector field to the visit open dialog
* added sector field to main table

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -62,6 +62,7 @@
 						<th>Visit Ref. #</th>
 						<th>Visit Start Date</th>
 						<th>Primary Location</th>
+						<th>Sector</th>
 						<th>Industry</th>
 						<th>Account Name</th>
 						<th>PAL/LFE</th>
