* added archive mode support to the exporter servlet.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -98,6 +98,13 @@
 			</p>	
 		</div>
 		
+		<div id="rkonDialog" title="Export or Archive Records?">
+			<p>
+				Exporting will dump the full data set in the database currently. <br />
+				Archiving will only dump records older than today.
+			</p>
+		</div>
+		
 		<div id="createVisitDialog" title="Visitor Information Sheet">
 			<form id="createVisitForm">
 				<div id="createVisitTabs">
