* incremental updates for purging.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -109,7 +109,7 @@
 		<div id="purgeDialog" title="Purge Confirmation">
 			<div class="ui-state-highlight">
 				<img src="./images/exclamation.png">
-				<em>WARNING!</em>
+				<strong>WARNING!</strong>
 				<p>
 					This will remove/delete all visit records from the database 
 					which have already ended by today!
@@ -117,7 +117,7 @@
 			</div>
 			
 			<fieldset>
-				<legend>Please enter the secret passphrase to continue:</legend>
+				<legend>Please enter passphrase to continue:</legend>
 				<label for="purgePass">Passphrase:</label>
 				<input type="password" id="purgePass">
 			</fieldset>
