* refactorings * final push for purging.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -159,14 +159,14 @@
 						<table>
 							<tbody>
 								<tr>
-									<td><label for="sector">Sector:</label></td>
+									<td><label for="sector">Sector*:</label></td>
 									<td>
 										<select name="sector" id="sector" required>
 										</select>
 									</td>
 								</tr>
 								<tr>
-									<td><label for="industry">Industry:</label></td>
+									<td><label for="industry">Industry*:</label></td>
 									<td>
 										<select name="industry" id="industry" required>
 										</select>
