--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -181,13 +181,13 @@
 									<td>
 										<select name="palLFE" id="palLFE" required>
 											<option value="Mohan Bachav">Mohan Bachav</option>
-											<option value="Shreenivas Kulkarni">Shreenivas Kulkarni</option>
+											<!-- <option value="Shreenivas Kulkarni">Shreenivas Kulkarni</option> -->
 											<option value="Debashis Das">Debashis Das</option>
 											<option value="Sanjeev Majumder">Sanjeev Majumder</option>
-											<option value="Nikhil A Wadgaonkar">Nikhil A Wadgaonkar</option>
-											<option value="Kiran Papanna">Kiran Papanna</option>
-											<option value="Chetna Thakur">Chetna Thakur</option>
-											<option value="Suryadipta Datta">Suryadipta Datta</option>
+											<!-- <option value="Nikhil A Wadgaonkar">Nikhil A Wadgaonkar</option> -->
+											<!-- <option value="Kiran Papanna">Kiran Papanna</option> -->
+											<!-- <option value="Chetna Thakur">Chetna Thakur</option> -->
+											<!-- <option value="Suryadipta Datta">Suryadipta Datta</option> -->
 											<option value="Milind Kulkarni">Milind Kulkarni</option>
 											<option value="Santosh Agharkar">Santosh Agharkar</option>
 											<option value="Santosh Prasad">Santosh Prasad</option>
@@ -196,6 +196,9 @@
 											<option value="Sandeep Debray">Sandeep Debray</option>
 											<option value="Rajeev Warrier">Rajeev Warrier</option>
 											<option value="Anindya Majumdar">Anindya Majumdar</option>
+											<option value="Ayan Majumdar">Ayan Majumdar</option>
+											<option value="Partha K Chaudhuri">Partha K Chaudhuri</option>
+											<option value="Vinayak J Oak">Vinayak J Oak</option>
 										</select>
 										
 									</td>
